photos page routed

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -2,6 +2,6 @@
 // @import 'normalize';
 
 // $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
-// @import 'font-awesome';
+@import 'font-awesome';
 @import 'box-sizing';
 @import 'adonis';
