--- a/resources/views/photos.njk
+++ b/resources/views/photos.njk
@@ -7,12 +7,13 @@
 </div>
 <div class="form-container">
   <div class="form-container__inner">
-<form class="upform">
+<form action='/photos' method = "POST"class="upform">
+  {{csrfField}}
   <input class="upform__url" type="text" name="url" placeholder="Photo URL">
 <textarea class="upform__caption"  placeholder="Photo Caption"type="text" name="caption"rows="5" cols="40"></textarea>
 <div class="btn-container">
-<button class="upform__cancel btn">Cancel</button>
-<button class="upform__submit btn">Add Image</button>
+<button type="button"class="upform__cancel btn">Cancel</button>
+<button type="submit" class="upform__submit btn">Add Image</button>
 </div>
 </form>
   </div>
@@ -22,10 +23,9 @@
 <div class="main-container__inner">
   <div class="card">
 
-  <img class="card-img" src="http://placehold.it/300" alt="" />
+  <img class="card-img" src="{{url}}" alt="" />
   <p class="card-caption">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
+{{caption}}  </p>
 </div>
 
 </div>
