✔ Database migrated successfully.

--- a/resources/views/master.njk
+++ b/resources/views/master.njk
@@ -24,6 +24,8 @@
   </section>
 </body>
 <script type="text/javascript">
-
+  document.querySelector('.plus').addEventListener('click',()=>{
+  document.querySelector('.upform').classList.toggle('upform--active');
+});
 </script>
 </html>
