--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -24,9 +24,12 @@ background: lightblue;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  height: 0;
+      transition:all .3s ease-in;
 
   &--active{
-    height: 100px;
+    height: 200px;
+    transition:all .6s ease-out;
   }
   &__url{
     margin: 1rem 0;
@@ -35,6 +38,7 @@ background: lightblue;
   &__caption{
     margin: 1rem 0;
     font-size: 1rem;
+    min-height: 1.5rem;
   }
   &__cancel{
 
